--- a/styles.css
+++ b/styles.css
@@ -32,3 +32,19 @@ p {
   padding-top: 110px;
   height: 90vh;
 }
+
+@media (max-width: 576px) {
+  .hero {
+    background-size: cover;
+    background-position: center;
+    padding-top: 160px;
+    height: 90vh;
+  }
+}
+
+@media (min-height: 800px) and (max-height: 1000px) {
+  h1 {
+    margin-bottom: 195px;
+    margin-top: 10px;
+  }
+}
