--- a/styles.css
+++ b/styles.css
@@ -7,13 +7,13 @@ h1 {
   color: rgb(250, 250, 250);
   /*rgb(230, 245, 255);*/
 }
-h2,
 h3 {
   font-family: "MonteCarlo", cursive;
   text-align: center;
   color: rgba(250, 250, 250, 100%);
   font-size: 40px;
 }
+h2,
 p {
   font-family: "Cormorant Garamond", serif;
 }
@@ -40,6 +40,30 @@ p {
     padding-top: 160px;
     height: 90vh;
   }
+}
+
+h2 {
+  font-size: 7vh;
+  line-height: 1.5;
+}
+
+p {
+  font-size: 3vh;
+}
+
+.activities {
+  text-align: center;
+  padding: 40px 0;
+}
+
+.col {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.photos {
+  border-radius: 10px;
 }
 
 @media (min-height: 800px) and (max-height: 1000px) {
