added learn more button

--- a/styles.css
+++ b/styles.css
@@ -1,36 +1,10 @@
-h1 {
-  font-family: "Ballet", cursive;
-  font-weight: 500;
-  font-size: 120px;
-  text-align: center;
-  margin-bottom: 95px;
-  color: rgb(250, 250, 250);
-  /*rgb(230, 245, 255);*/
-}
-h3 {
-  font-family: "MonteCarlo", cursive;
-  text-align: center;
-  color: rgba(250, 250, 250, 100%);
-  font-size: 40px;
-}
-h2,
-p {
-  font-family: "Cormorant Garamond", serif;
-}
-
-.spare-font {
-  font-family: "Cinzel Decorative", cursive;
-}
-.magical-font {
-  font-family: "IM Fell English SC", serif;
-}
-
 .hero {
   background-image: url(images/blejski-otok-banner-1024x405.jpeg);
   background-size: cover;
   background-position: center;
   padding-top: 110px;
   height: 90vh;
+  text-align: center;
 }
 
 @media (max-width: 576px) {
@@ -42,6 +16,40 @@ p {
   }
 }
 
+.spare-font {
+  font-family: "Cinzel Decorative", cursive;
+}
+.magical-font {
+  font-family: "IM Fell English SC", serif;
+}
+
+h1 {
+  font-family: "Ballet", cursive;
+  font-weight: 500;
+  font-size: 120px;
+  text-align: center;
+  margin-bottom: 95px;
+  color: rgb(250, 250, 250);
+  /*rgb(230, 245, 255);*/
+}
+
+h3 {
+  font-family: "MonteCarlo", cursive;
+  text-align: center;
+  color: rgba(250, 250, 250, 100%);
+  font-size: 40px;
+}
+
+.learn-btn {
+  margin: 20px auto;
+}
+
+h2,
+p,
+a {
+  font-family: "Cormorant Garamond", serif;
+}
+
 h2 {
   font-size: 7vh;
   line-height: 1.5;
@@ -49,6 +57,9 @@ h2 {
 
 p {
   font-size: 3vh;
+}
+
+a {
 }
 
 .activities {
