--- a/styles.css
+++ b/styles.css
@@ -39,7 +39,7 @@ h1 {
   /*rgb(230, 245, 255);*/
 }
 
-h3 {
+.heroH3 {
   font-family: "MonteCarlo", cursive;
   text-align: center;
   color: rgba(250, 250, 250, 100%);
@@ -48,6 +48,12 @@ h3 {
 
 .learn-btn {
   margin: 20px auto;
+}
+
+h3.title {
+  font-family: "MonteCarlo", cursive;
+  text-align: center;
+  font-size: 55px;
 }
 
 h2,
@@ -82,6 +88,10 @@ a {
 
 .photos {
   border-radius: 10px;
+}
+
+section.container {
+  margin: auto;
 }
 
 @media (min-height: 800px) and (max-height: 1000px) {
