--- a/styles.css
+++ b/styles.css
@@ -54,6 +54,7 @@ h3.title {
   font-family: "MonteCarlo", cursive;
   text-align: center;
   font-size: 55px;
+  margin: 35px auto;
 }
 
 h2,
@@ -93,6 +94,19 @@ a {
 section.container {
   margin: auto;
 }
+
+form {
+  max-width: 500px;
+  margin: auto;
+}
+
+.form-group {
+  margin: 10px auto;
+}
+
+/*.btn-div {
+  margin: auto;
+}*/
 
 @media (min-height: 800px) and (max-height: 1000px) {
   h1 {
