--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,9 @@
 .navbar-logo {
-  font-family: cursive, "Ballet";
+  font-family: "Great Vibes", cursive;
   font-style: italic;
-  font-size: x-large;
+  font-size: 5vh;
+  padding: 1vh 0 0 0;
+  margin: 0 auto;
 }
 
 .hero {
@@ -37,6 +39,9 @@ h1 {
   margin-bottom: 95px;
   color: rgb(250, 250, 250);
   /*rgb(230, 245, 255);*/
+  /*position: absolute;
+  left: 42%;
+  top: 28%;*/
 }
 
 .heroH3 {
@@ -72,7 +77,16 @@ p {
   font-size: 3vh;
 }
 
-a {
+button.accordion-button {
+  font-family: "Cormorant Garamond", serif;
+  font-weight: 700;
+  font-size: 4vh !important;
+}
+
+.accordion-button:not(.collapsed) {
+  color: #002255;
+  background-color: #e7f1ff;
+  box-shadow: inset 0 -1px 0 rgb(0 0 0 / 13%);
 }
 
 .activities {
