--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+* {
+  margin: 0;
+  padding: 0;
+}
 .navbar-logo {
   font-family: "Great Vibes", cursive;
   font-style: italic;
@@ -19,15 +23,18 @@
   text-align: center;
 }
 
-@media (max-width: 576px) {
+@media (max-width: 768px) {
   .hero {
     background-size: cover;
     background-position: center;
     padding-top: 160px;
     height: 90vh;
   }
-  .hero-main-title {
-    font-size: 10px;
+  .hero-main-title > h1 {
+    font-size: 14vh;
+  }
+  .hero-subtitle > h3 {
+    font-size: 4.5vh;
   }
 }
 
@@ -95,6 +102,10 @@ h2 {
   line-height: 1.5;
 }
 
+h6 {
+  font-size: 2.7vh;
+}
+
 p {
   font-size: 3vh;
 }
@@ -127,7 +138,7 @@ button.accordion-button {
   border-radius: 10px;
 }
 
-section.container {
+.container {
   margin: auto;
 }
 
@@ -151,9 +162,19 @@ form {
   }
 }
 
+body {
+  position: relative;
+  min-height: 100vh;
+  padding-bottom: 170px;
+}
 footer {
   text-align: center;
   padding: 40px 0;
   background: rgb(248, 249, 250);
   font-size: medium;
+  width: 100%;
+  height: 100px;
+  margin-top: 50px;
+  position: absolute;
+  bottom: 0;
 }
