--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@
 }
 
 .nav-link {
-  font-size: 2.3vh;
+  font-size: 20px;
   color: black !important;
 }
 
@@ -151,10 +151,12 @@ form {
 
 .form-group {
   margin: 10px auto;
+  font-family: "Cormorant Garamond", serif;
 }
 
 .contact-btn {
   margin-top: 20px;
+  font-family: "Cormorant Garamond", serif !important;
 }
 
 /*.btn-div {
